--- a/app/src/main/res/layout/activity_registrar_debito.xml
+++ b/app/src/main/res/layout/activity_registrar_debito.xml
@@ -10,24 +10,20 @@
 
     <include android:id="@+id/registrarDebitoProdutos"
              layout="@layout/content_registrar_debito_produtos"
-             android:visibility="gone"/>
+             android:visibility="visible"/>
 
     <include android:id="@+id/registrarDebitoCesta"
-             layout="@layout/content_registrar_debito_cesta" android:visibility="gone"/>
-
-    <include android:id="@+id/registrarDebitoResumo"
-             layout="@layout/content_registrar_debito_resumo" android:visibility="gone" />
+            layout="@layout/content_registrar_debito_cesta" android:visibility="visible"/>
 
     <include android:id="@+id/registrarDebitoAdicionarProduto"
              layout="@layout/content_registrar_debito_adicionar_produto"
              android:visibility="visible"/>
 
-    <include android:id="@+id/registrarDebitoPagamentoTipo"
-             android:visibility="gone"
-             layout="@layout/content_registrar_debito_pagamento_tipo"/>
+    <include android:id="@+id/registrarDebitoResumo"
+            layout="@layout/content_registrar_debito_resumo" android:visibility="visible" />
 
-    <include android:id="@+id/registrarDebitoPagamentoMeio"
-             android:visibility="visible"
-             layout="@layout/content_registrar_debito_pagamento_meio"/>
+    <include android:id="@+id/registrarDebitoPagamento"
+            layout="@layout/content_registrar_debito_pagamento"
+            android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
