--- a/app/src/main/res/layout/activity_cadastrar_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastrar_cliente.xml
@@ -64,7 +64,6 @@
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="number"
-                      android:maxLength="11"
                       android:layout_marginTop="8dp"
                       app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                       app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +73,7 @@
                       android:hint="@string/cliente_dataNascimento"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:inputType="text"
+                      android:inputType="number"
                       android:layout_marginTop="8dp"
                       app:layout_constraintTop_toBottomOf="@+id/editTextCPF"
                       app:layout_constraintStart_toStartOf="parent"
